[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://NewGameDialog.tscn" type="PackedScene" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 470.0
margin_top = 276.0
margin_right = 554.0
margin_bottom = 324.0
custom_constants/separation = 8

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 84.0
margin_bottom = 48.0
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameDialog" parent="." instance=ExtResource( 2 )]
margin_left = 243.421
margin_top = 148.523
margin_right = 625.421
margin_bottom = 287.523
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="game_created" from="NewGameDialog" to="." method="_on_game_created"]
